src/style.css
/* Copyright (c) 2015 Jordan Turley, CSGO Win Big. All Rights Reserved. */

html {
	height: 100%;
}

body {
	background-image: url(images/background.jpg);
	background-color: black;
	background-repeat: no-repeat;
	background-position: center top;
	height: 100%;
	width: 100%;
	font-family: Arial;
	color: white;
}

input {
	color: black;
}

#topleft-menu {
	width: 100%;
	height: 40px;
	line-height: 40px;
	text-align: center;
	font-size: 20px;
	background-color: white;
	color: black;
	border-top-left-radius: 3px;
	border-top-right-radius: 3px;
}

.topleft-link-wrapper {
	height: 40px;
	width: 100%;
	line-height: 40px;
	font-size: 20px;
	background-color: #4A636B;
	text-decoration: none;
}

.topleft-link-wrapper:last-child {
	border-bottom-left-radius: 3px;
	border-bottom-right-radius: 3px;
}

.topleft-link {
	color: black;
	width: 100%;
	height: 100%;
	line-height: 100%;
	text-decoration: none;
	border-radius: 0px;
	/* margin-left: 5px; */
}

.topleft-link-wrapper:not(:last-child) {
	border-bottom: 1px solid black;
}

.modal {
	color: black;
}

.link {
	color: white;
	text-decoration: underline;
}
.link:hover {
	color: white;
	text-decoration: none;
}
.link:active, .link:visited {
	color: white;
}

.bg {
	background-color: #4A636B;
	border-radius: 3px;
}

.info {
	font-size: 30px;
	color: #33FF00;
}

#deposit-link {
	background-color: #F6E444;
	border-radius: 3px;
	padding: 5px 10px;
	height: 100%;
}

#chatbox {
	overflow: none;
	position: relative;
	height: 400px;
	padding: 0px;
	color: black;
}

#chatmessages {
	overflow: auto;
	position: absolute;
	bottom: 0px;
	width: 100%;
	max-height: 400px;
}

.chat-message-even {
	background-color: #AAA;
}

.chat-message-odd {
	background-color: #888;
}

.chat-message {
	word-wrap: break-word;
	position: relative;
}

.chat-profile-pic {
	position: absolute;
	top: 2px;
	left: 2px;
	height: 30px;
	width: 30px;
}

.chat-profile-name {
	position: absolute;
	top: 0px;
	left: 35px;
}

.chat-date-time {
	position: absolute;
	top: 15px;
	left: 35px;
}

.chat-text {
	padding-top: 35px;
}

#pot {
	width: 100%;
}

.pot-item {
	width: 100%;
	height: 75px;
	/* border: 1px solid black; */
	margin-bottom: 5px;
}

.pot-item:last-child {
	margin-bottom: 0px;
}

.pot-item-profile-image {
	display: inline;
	height: 100%;
}

.pot-item-name {
	display: inline;
	max-width: 90%;
	margin-left: 10px;
	margin-right: 10px;
	word-wrap: break-word;
}

.pot-item-image {
	display: inline;
	height: 100%;
}

.pot-item, #pot-items-price, #prev-game-info {
	font-size: 18px;
}

